# honestly

./: .gitignore  .pre-commit-config.yaml  AAIP-SWARM-IMPLEMENTATION.md  ARCHITECTURE.md  AUDIT.md  BATTLE-TESTED.md  BUILD-COMPLETE.md  CLOUDFLARE-PAGES-DEPLOYMENT.md  CNAME  CODE_REVIEW_SUMMARY.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  CRITICAL-FIXES-REQUIRED.md  CRITICAL-LAUNCH-ISSUES.md  DEBUG-FIXES-APPLIED.md  DEPENDENCY-INSTALL-STATUS.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  DOCUMENTATION_REVIEW.md  EXECUTION-STATUS.md  FUNDING-PHILOSOPHY.md  KNOWN_ISSUES.md  LICENSE  LICENSE-EXTRAS.md  Makefile  NAMING-CONVENTION.md  OPSEC.md  PHASE4-COMPLETE-SETUP.md  PHASE4-DECISION-SUMMARY.md  PHASE4-TOKEN-ECONOMICS.md  PITCH_DECK.html  PRE-LAUNCH-ACTION-PLAN.md  PRODUCTION_VALIDATION.md  QUICKSTART.md  README.md  REPOSITORY_ACCESS_CONFIRMED.md  RESILIENCE.md  SECURITY-AUDIT-REPORT.md  (+31 more)
.github/: FUNDING.yml  copilot-instructions.md
archive/: AAIP-SWARM-IMPLEMENTATION.md  CODE_REVIEW_SUMMARY.md  COMPLETE-BUILD-SUMMARY.md  CONDUCTME-AAIP-REVIEW.md  DEPLOYMENT.md  FINAL-STATUS.md  KNOWN_ISSUES.md  PHASE4-IMPLEMENTATION.md  PHASE4-READINESS-CHECK.md  PHASE4-READY-TO-COMPILE.md  PHASE4-SETUP-PROGRESS.md  PHASE4-TOKEN-ECONOMICS.md  PITCH_DECK.txt  PRODUCTION-READINESS.md  PRODUCTION-READY.md  PROJECT_STATUS.md  README.md  SHIPPING_STRATEGY.md  SUPPLY-CONFIRMATION.md  (+7 more)
backend-solana/programs/veridicus/: Cargo.toml
backend-solana/programs/veridicus/src/: airdrop.rs  governance.rs  lib.rs  liquidity.rs  state.rs
(+417 files in other folders)
