[package]
name = "VERIDICUS"
version = "0.1.0"
description = "VERIDICUS - Quantum Access Token on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "VERIDICUS"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.18.0"
# TODO: Add Pyth SDK when implementing full oracle integration
# pyth-solana-receiver-sdk = "0.1.0"

